[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/checkpoint.gd" type="Script" id=1]
[ext_resource path="res://visuals/sprite_sheets/32-bit-sprite-sheet-ENVIRONMENT.png" type="Texture" id=2]
[ext_resource path="res://audio/SNES - The Legend of Zelda A Link to the Past - Sound Effects/shock.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6.75 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("machine:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("lever:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "save_game"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("machine:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("lever:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}

[node name="checkpoint" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -13, 8.75 )
shape = SubResource( 1 )

[node name="machine" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 4
region_enabled = true
region_rect = Rect2( 48, 208, 64, 32 )

[node name="lever" type="Sprite" parent="."]
position = Vector2( -15, 6 )
texture = ExtResource( 2 )
hframes = 3
region_enabled = true
region_rect = Rect2( 0, 216, 48, 24 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/save_game = SubResource( 3 )

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="spawn_point" type="Position2D" parent="."]
position = Vector2( 18, -1 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
